fix login text boxes being too wide on portrait-mode mobile device.

--- a/doc/demoUI.css
+++ b/doc/demoUI.css
@@ -115,6 +115,7 @@ input:disabled, button:disabled {
     color: #222;
     padding: 0.75em;
     width: 24em;
+    max-width: 50vw;
     display: inline-flex;
   }
 
